--- a/project/SDL_Project.vcxproj
+++ b/project/SDL_Project.vcxproj
@@ -224,6 +224,7 @@ xcopy "$(ProjectDir)..\assets" "$(OutDir)\assets" /Y  /E /C /I</Command>
     <ClCompile Include="..\src\InputModule.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\GameplayStructsDef.h" />
     <ClInclude Include="..\src\GSGameplayState.h" />
     <ClInclude Include="..\src\GSLogoState.h" />
     <ClInclude Include="..\src\GSMainMenuState.h" />
